--- a/druyes.info.yml
+++ b/druyes.info.yml
@@ -5,3 +5,7 @@ version: VERSION
 base theme: stable
 core: 8.x
 core_version_requirement: ^8 || ^9
+
+libraries:
+  - druyes/global-styling
+  - druyes/global-scripts
