add sass support to theme - setup gulp in gulpfile.js - adding bootstrap support

--- a/druyes.libraries.yml
+++ b/druyes.libraries.yml
@@ -2,7 +2,12 @@ global-styling:
   css:
     theme:
       css/style.css: {}
+      node_modules/bootstrap/dist/css/bootstrap.css: {}
 
 global-scripts:
   js:
     js/script.js: {}
+    node_modules/bootstrap/dist/js/bootstrap.bundle.js: {}
+    node_modules/bootstrap/dist/js/bootstrap.js: { }
+  dependencies:
+    - core/jquery
